add plotting code for hw2

--- a/hw/hw2.tex
+++ b/hw/hw2.tex
@@ -65,7 +65,14 @@ for (i=1; i<100; i++)
 \begin{enumerate}
 	\item Draw the iteration spaces for (a) and (b).
 		\begin{Answer}
+		\begin{figure}[H]
+		    \centerline{\includegraphics[width=6in]{figures/iteration_space_a.png}}
+		\end{figure}
+		\begin{figure}[H]
+		    \centerline{\includegraphics[width=6in]{figures/iteration_space_b.png}}
+		\end{figure}
 		\end{Answer}
+		\newpage
 	\item Write the constraints in matrix form (i.e., give the values of the vectors $i$ and $b$ and the matrix $B$.)
 		\begin{Answer}
 		a.
